# BackEnd

./: .gitignore  README.md  addresses_with_coords.csv  pyproject.toml
.github/ISSUE_TEMPLATE/: 이슈-템플릿.md
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_user_id.py  0003_follow.py  0004_remove_user_sprotsleisurepreference_and_more.py  0005_alter_user_relocationdate.py
config/: settings.py  urls.py
document/: addresses.csv  addresses_with_coords.csv  convertaddress.py
fixtures/: levelmissions.json  weeklymissions.json
markets/: admin.py  models.py  serializers.py  urls.py  views.py
markets/migrations/: 0001_initial.py  0002_favoritegroup_favoriteitem.py  0003_market_telephone_market_url.py  0004_alter_favoritegroup_color.py  0004_image.py  0005_favoriteitem_createdat.py  0006_merge_0004_image_0005_favoriteitem_createdat.py  0007_alter_market_business_hours_alter_market_url.py  0007_market_embedding.py  0008_merge_20250823_2005.py  0009_searchhistory.py
missions/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
missions/migrations/: 0001_initial.py  0002_levelmission_requireverification_and_more.py  0003_alter_accountlevelmission_completedat_and_more.py  0004_alter_accountweeklymission_status_and_more.py  0005_levelmission_category.py  0006_alter_levelmission_category.py  0007_levelmission_reward_xp_weeklymission_reward_xp.py  0008_alter_levelmission_category.py
reviews/: models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  (+3 more)
(+1 files in other folders)
