[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "YoonisKim",email = "runheng1209@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "paramiko (<3.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "boto3 (>=1.40.11,<2.0.0)",
    "django-storages[boto3] (>=1.14.6,<2.0.0)",
    "openai (>=1.100.2,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
    
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
